force-app/main/default/objects/QuoteLineItem/fields/Cantidad_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Descuento__c</fullName>
    <description>Cantidad de conceptos producto con un descuento definido.</description>
    <label>Cantidad % Descuento</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>