force-app/main/default/objects/QuoteLineItem/fields/Cantidad_Descuento_Positivo__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Descuento_Positivo__c</fullName>
    <label>Cantidad % Descuento Positivo</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>