force-app/main/default/objects/QuoteLineItem/fields/CantidadTarjetas__c.field-meta.xml
<CustomField>
    <fullName>CantidadTarjetas__c</fullName>
    <label>Cantidad de tarjetas o chequeras</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>