force-app/main/default/objects/QuoteLineItem/fields/CantidadTarjetasDescuento__c.field-meta.xml
<CustomField>
    <fullName>CantidadTarjetasDescuento__c</fullName>
    <description>Campo para ingreso de Cantidad de tarjetas referente al % de descuento  de las tarifas editables</description>
    <label>Cantidad de tarjetas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>