force-app/main/default/objects/QuoteLineItem/fields/ClabeInterbancaria__c.field-meta.xml
<CustomField>
    <fullName>ClabeInterbancaria__c</fullName>
    <label>Clabe Interbancaria</label>
    <length>18</length>
    <type>Text</type>
</CustomField>