force-app/main/default/objects/QuoteLineItem/fields/ComentariosCotizacion__c.field-meta.xml
<CustomField>
    <fullName>ComentariosCotizacion__c</fullName>
    <label>Comentarios para el cliente</label>
    <type>TextArea</type>
</CustomField>