force-app/main/default/objects/QuoteLineItem/fields/Comision_por_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Comision_por_Servicio__c</fullName>
    <label>Comisión por Servicio</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>