force-app/main/default/objects/QuoteLineItem/fields/Comision_servicio__c.field-meta.xml
<CustomField>
    <fullName>Comision_servicio__c</fullName>
    <formula>Quote.Opportunity.Comision_por_Servicio__c *  UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comisión por servicio ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>