force-app/main/default/objects/QuoteLineItem/fields/ContratoTC3__c.field-meta.xml
<CustomField>
    <fullName>ContratoTC3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato TC3.0</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Partidas de presupuesto</relationshipLabel>
    <relationshipName>PartidasPresupuestosContrato</relationshipName>
    <type>Lookup</type>
</CustomField>