force-app/main/default/objects/QuoteLineItem/fields/Escalonamiento1__c.field-meta.xml
<CustomField>
    <fullName>Escalonamiento1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si se trata de un escalonamiento o no</description>
    <label>Escalonamiento1</label>
    <type>Checkbox</type>
</CustomField>