force-app/main/default/objects/QuoteLineItem/fields/Escalonamiento__c.field-meta.xml
<CustomField>
    <fullName>Escalonamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica a que partida esta relacionado el escalonamiento</description>
    <label>Escalonamiento</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Partidas de presupuesto</relationshipLabel>
    <relationshipName>PartidasPresupuesto</relationshipName>
    <type>Lookup</type>
</CustomField>