force-app/main/default/objects/QuoteLineItem/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cotización</fullName>
            </value>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Implementación</fullName>
            </value>
            <value>
                <fullName>Pedido</fullName>
            </value>
            <value>
                <fullName>Piloto</fullName>
            </value>
            <value>
                <fullName>Ganada</fullName>
            </value>
            <value>
                <fullName>Perdida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>