force-app/main/default/objects/QuoteLineItem/fields/Facturacion1__c.field-meta.xml
<CustomField>
    <fullName>Facturacion1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de contrato</description>
    <label>Facturación 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partidas de presupuesto</relationshipLabel>
    <relationshipName>PartidasPresupuestoFacturacion1</relationshipName>
    <type>Lookup</type>
</CustomField>