force-app/main/default/objects/QuoteLineItem/fields/Facturacion2__c.field-meta.xml
<CustomField>
    <fullName>Facturacion2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facturación 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partidas de presupuesto (Facturación 2)</relationshipLabel>
    <relationshipName>PartidasPresupuestoFacturacion2</relationshipName>
    <type>Lookup</type>
</CustomField>