force-app/main/default/objects/QuoteLineItem/fields/FormaPago__c.field-meta.xml
<CustomField>
    <fullName>FormaPago__c</fullName>
    <label>Método de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TransferenciaElectronica</fullName>
                <label>Transferencia electrónica</label>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Deposito</fullName>
                <label>Depósito bancario</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>