force-app/main/default/objects/QuoteLineItem/fields/MotivoEtapa__c.field-meta.xml
<CustomField>
    <fullName>MotivoEtapa__c</fullName>
    <description>Motivo de la etapa del producto cuando es Ganada o Perdida</description>
    <label>Motivo de la etapa</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Etapa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asesoria Fiscal</fullName>
            </value>
            <value>
                <fullName>Comision</fullName>
            </value>
            <value>
                <fullName>Comision mas baja</fullName>
            </value>
            <value>
                <fullName>Contacto no quiso atender</fullName>
            </value>
            <value>
                <fullName>Conveniencia Fiscal</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
            <value>
                <fullName>Duplicada por Error</fullName>
            </value>
            <value>
                <fullName>Financiamiento AMEX</fullName>
            </value>
            <value>
                <fullName>Funcionalidad-Cobertura</fullName>
            </value>
            <value>
                <fullName>Funcionalidad-Control</fullName>
            </value>
            <value>
                <fullName>Funcionalidad-Plataformas</fullName>
            </value>
            <value>
                <fullName>Funcionalidad-Seguridad</fullName>
            </value>
            <value>
                <fullName>Mal Servicio</fullName>
            </value>
            <value>
                <fullName>No acepta migracion</fullName>
            </value>
            <value>
                <fullName>No quiso pagar comisión</fullName>
            </value>
            <value>
                <fullName>Recomendación</fullName>
            </value>
            <value>
                <fullName>Recomendación BBVA</fullName>
            </value>
            <value>
                <fullName>Recomendación Chedraui</fullName>
            </value>
            <value>
                <fullName>Valores Agregados-Apps</fullName>
            </value>
            <value>
                <fullName>Valores Agregados-Beneficio Club</fullName>
            </value>
            <value>
                <fullName>Valores Agregados-SAC 24/7</fullName>
            </value>
            <value>
                <fullName>Valores Agregados-Servicio Postventa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>