force-app/main/default/objects/QuoteLineItem/fields/NivelConsumo__c.field-meta.xml
<CustomField>
    <fullName>NivelConsumo__c</fullName>
    <label>Nivel de consumo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>