force-app/main/default/objects/QuoteLineItem/fields/NumberOfShipments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfShipments__c</fullName>
    <description>Número de envíos relacionados al producto de la cotización.</description>
    <label>Direcciones de Entrega</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>