force-app/main/default/objects/QuoteLineItem/fields/OpcionesMetodoPago__c.field-meta.xml
<CustomField>
    <fullName>OpcionesMetodoPago__c</fullName>
    <label>Opciones de método de pago</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FormaPago__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Banamex</fullName>
            </value>
            <value>
                <fullName>Banorte</fullName>
            </value>
            <value>
                <fullName>BBVA Bancomer</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>Multiva</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
            <value>
                <fullName>Scotiabank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>