force-app/main/default/objects/QuoteLineItem/fields/OtroMetodoPago__c.field-meta.xml
<CustomField>
    <fullName>OtroMetodoPago__c</fullName>
    <label>Otro método de pago</label>
    <length>150</length>
    <type>Text</type>
</CustomField>