force-app/main/default/objects/QuoteLineItem/fields/PartidaPresupuesto__c.field-meta.xml
<CustomField>
    <fullName>PartidaPresupuesto__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PartidaPresupuesto</label>
    <type>Text</type>
</CustomField>