force-app/main/default/objects/QuoteLineItem/fields/Pedidos__c.field-meta.xml
<CustomField>
    <fullName>Pedidos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de contrato</description>
    <label>Pedidos</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partidas de presupuesto (Pedidos)</relationshipLabel>
    <relationshipName>PartidasPresupuestoPedidos</relationshipName>
    <type>Lookup</type>
</CustomField>