force-app/main/default/objects/QuoteLineItem/fields/RecursosHumanos__c.field-meta.xml
<CustomField>
    <fullName>RecursosHumanos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de contrato</description>
    <label>Recursos Humanos</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partidas de presupuesto (Recursos Humanos)</relationshipLabel>
    <relationshipName>PartidasPresupuestoRH</relationshipName>
    <type>Lookup</type>
</CustomField>