force-app/main/default/objects/QuoteLineItem/fields/TarjetaAsociada__c.field-meta.xml
<CustomField>
    <fullName>TarjetaAsociada__c</fullName>
    <description>Últimos cuatro dígitos de la tarjeta con la que se efectuará la transferencia electrónica</description>
    <inlineHelpText>Capturar los últimos cuatro dígitos de la tarjeta con la que se efectuará la transferencia electrónica</inlineHelpText>
    <label>Tarjeta asociada</label>
    <length>4</length>
    <type>Text</type>
</CustomField>