force-app/main/default/objects/QuoteLineItem/fields/TipoAmex__c.field-meta.xml
<CustomField>
    <fullName>TipoAmex__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixto</fullName>
                <default>true</default>
                <label>Mixto</label>
            </value>
            <value>
                <fullName>Amex</fullName>
                <isActive>false</isActive>
                <label>Amex</label>
            </value>
            <value>
                <fullName>Parcial</fullName>
                <isActive>false</isActive>
                <label>Parcial</label>
            </value>
            <value>
                <fullName>Total</fullName>
                <isActive>false</isActive>
                <label>Total</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>