force-app/main/default/objects/QuoteLineItem/fields/TipoTarjeta__c.field-meta.xml
<CustomField>
    <fullName>TipoTarjeta__c</fullName>
    <label>Tipo de tarjeta</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FormaPago__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>