force-app/main/default/objects/QuoteLineItem/fields/Total_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Total_Descuento__c</fullName>
    <description>Total del descuento para todas los concepto productos.</description>
    <label>Total % Descuento</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>