force-app/main/default/objects/QuoteLineItem/fields/Total_Descuento_Positivo__c.field-meta.xml
<CustomField>
    <fullName>Total_Descuento_Positivo__c</fullName>
    <label>Total % Descuento Positivo</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>