force-app/main/default/objects/QuoteLineItem/fields/VigenciaCotizacion__c.field-meta.xml
<CustomField>
    <fullName>VigenciaCotizacion__c</fullName>
    <label>Vigencia de Cotización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 días</fullName>
            </value>
            <value>
                <fullName>14 días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>