force-app/main/default/objects/QuoteLineItem/fields/VigenciaDescuento__c.field-meta.xml
<CustomField>
    <fullName>VigenciaDescuento__c</fullName>
    <description>Campo para la selección de fecha de vigencia de descuento otorgado referente al % de descuento de las tarifas editables.</description>
    <label>Vigencia Descuento</label>
    <type>Date</type>
</CustomField>